<resources>
    <string name="app_name">peer2pay</string>
    <string name="pay">Pay</string>
    <string name="receive">Receive</string>
    <string name="cards">Cards</string>
    <string name="title_activity_auth">Sign in</string>

    <!-- Strings related to add card_row-->
    <string name="Complete">Complete</string>
    <string name="Incomplete">Failed. Incomplete</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_card">Add Card</string>
    <string name="remove_card">Remove Card</string>
    <string name="post_code">Post Code</string>
    <string name="submit">Submit</string>
    <string name="account_number">Account Number</string>
    <string name="sortcode">SortCode</string>
    <string name="expire">Expire</string>
    <string name="cvc">CVC</string>
    <string name="password">Password</string>

    <!--params-->
    <string name="title_activity_add_alia">AddAlia</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">Add</string>
    <string name="email">Email</string>
    <string name="bank_name">Bank Name</string>
    <string name="address_one">Address One</string>
    <string name="middle_name">Middle Name</string>
    <string name="card_number">Card Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="address_two">Address Two</string>
    <string name="country">Country</string>
    <string name="postalcode">PostalCode</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_add_alias">Add_Alias</string>
    <string name="title_activity_add_form">AddForm</string>
    <string name="issuer_name">Bank Name</string>
    <string name="card_type">Card Type</string>

    <string-array name="bank_name">
        <item>Santander</item>
        <item>Halifax</item>
    </string-array>

    <string-array name="card_type">
        <item>Visa_Classic</item>
        <item>Visa_Gold</item>
        <item>Visa_Platinum</item>
        <item>Visa_Infinite</item>
        <item>Visa_Infinite_Privilege</item>
    </string-array>

    <string-array name="country">
        <item>United_Kingdom</item>
    </string-array>
</resources>
