<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".appPages.AddForm"
    tools:showIn="@layout/activity_add_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_number_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/card_number_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/issuer_name_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/issuer_name"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <Spinner
                android:id="@+id/issuer_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bank_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_type_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_type"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <Spinner
                android:id="@+id/card_type_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/card_type"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/middle_name_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middle_name"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/middle_name_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_one_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_one"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address_one_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/city_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/city_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/country_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <Spinner
                android:id="@+id/country_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/post_code_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_code"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/post_code_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_number_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_number_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edit"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/submit" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>